--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "react-tsparticles": "^2.12.2",
+    "react-vertical-timeline-component": "^3.6.0",
     "styled-components": "^6.1.8",
     "tsparticles": "^3.2.1",
     "web-vitals": "^2.1.4"
